[gd_scene load_steps=3 format=3 uid="uid://main_scene"]

[ext_resource type="Script" path="res://Assets/Scripts/Core/EngineBridge.gd" id="1_bridge"]
[ext_resource type="Script" path="res://Assets/Scripts/UI/UIManager.gd" id="2_ui"]

[node name="Main" type="Node2D"]
script = ExtResource("1_bridge")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 100)
zoom = Vector2(1, 1)

[node name="Player1" type="CharacterBody2D" parent="."]
position = Vector2(-200, 0)
script = ExtResource("3_player")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Player1"]

[node name="HurtboxVisual" type="Polygon2D" parent="Player1"]

[node name="HitboxVisual" type="Polygon2D" parent="Player1"]

[node name="Player2" type="CharacterBody2D" parent="."]
position = Vector2(200, 0)
script = ExtResource("3_player")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Player2"]

[node name="HurtboxVisual" type="Polygon2D" parent="Player2"]

[node name="HitboxVisual" type="Polygon2D" parent="Player2"]

[node name="Floor" type="Polygon2D" parent="."]
position = Vector2(0, 0)
color = Color(0.3, 0.3, 0.35, 1)
polygon = PackedVector2Array([-640, 0, 640, 0, 640, 10, -640, 10])

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("2_ui")

[node name="HUD" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="P1HealthBar" type="ProgressBar" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
grow_horizontal = 0
value = 100.0

[node name="P2HealthBar" type="ProgressBar" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 300.0
offset_bottom = 60.0
value = 100.0

[node name="TimerLabel" type="Label" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -30.0
offset_top = 20.0
offset_right = 30.0
offset_bottom = 60.0
grow_horizontal = 2
text = "99"
horizontal_alignment = 1

[node name="FrameLabel" type="Label" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -40.0
offset_right = 100.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
text = "FRAME 0"
horizontal_alignment = 1

[node name="MatchEndPanel" type="Panel" parent="CanvasLayer"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="WinnerLabel" type="Label" parent="CanvasLayer/MatchEndPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = 0.0
grow_horizontal = 2
text = "PLAYER 1 WINS!"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="CanvasLayer/MatchEndPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_top = 20.0
offset_right = 80.0
offset_bottom = 60.0
grow_horizontal = 2
text = "RESTART"
